# theater

./: .gitignore  App.xaml  App.xaml.cs  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  README.md  build_all.ps1  dev-app-update.yml  package-lock.json  package.json  theater.csproj  theater.sln
src/renderer/src/: App.tsx
theater/: electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json
theater/include/: theater.h
theater/native/: addon.cpp  binding.gyp  libtheater.lib
theater/src/main/: index.ts
theater/src/preload/: index.d.ts  index.ts
theater/src/renderer/src/: App.tsx
theater/src/renderer/src/assets/: main.css
theater_be/: CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  copy_lib_files.ps1
theater_be/include/: main.h  theater.h
theater_be/src/: main.cpp  test_main.cpp
theater_be/src/common/: theater.cpp
theater_be/src/common/audio/: audio_interface.cpp  audio_interface.h  audio_types.h
theater_be/src/window/audio/: directsound_capture.h  wasapi_capture.cpp  wasapi_capture.h
theater_be/test/unit/: test.cpp
theater_be/tests/: README.md
